# sciplot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake_install_generation.cmake  environment.devenv.yml  mkdocs-macros.py  mkdocs.yml  plot.hpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linux.yml  osx.yml  website.yml  windows.yml
Capim/: Plot.hpp  default.hpp  enums.hpp  palletes.hpp  util.hpp
Capim/specs/: axislabelspecs.hpp  borderspecs.hpp  boxspecs.hpp  depthspecs.hpp  fontspecs.hpp  gridspecs.hpp  gridspecsbase.hpp  keyspecs.hpp  legendspecs.hpp  linespecs.hpp  plotspecs.hpp  rotatespecs.hpp  showspecs.hpp  specs.hpp  textspecs.hpp  ticspecs.hpp  titlespecs.hpp
cmake/: CCache.cmake
cmake/PackageConfigTemplates/: sciplotConfig.cmake.in
docs/: CMakeLists.txt  about.md  api.md  index.md  installation.md  mkdocs.yml  tutorials.md
docs/api/: doxyfile
docs/api/src/: mainpage.md
docs/api/template/: footer.html  header.html  layout.xml
docs/css/: extra.css
docs/site/: 404.html  index.html  sitemap.xml
docs/site/about/: index.html
docs/site/api/: AxisLabelSpecs_8hpp_source.html  BorderSpecs_8hpp_source.html  ColumnIndex_8hpp_source.html  Constants_8hpp_source.html  Default_8hpp_source.html  DepthSpecsOf_8hpp_source.html  DrawSpecs_8hpp_source.html  Enums_8hpp_source.html  Figure_8hpp_source.html  Figures_8hpp_source.html  FillSpecsOf_8hpp_source.html  FillStyleSpecs_8hpp_source.html  FontSpecsOf_8hpp_source.html  FrameSpecsOf_8hpp_source.html  GridSpecsBase_8hpp_source.html  GridSpecs_8hpp_source.html  HistogramStyleSpecs_8hpp_source.html  LabelSpecs_8hpp_source.html  LegendSpecs_8hpp_source.html  LineSpecsOf_8hpp_source.html  OffsetSpecsOf_8hpp_source.html  Palettes_8hpp_source.html  PointSpecsOf_8hpp_source.html  ShowSpecsOf_8hpp_source.html  Specs_8hpp_source.html  TicsSpecs_8hpp_source.html  (+216 more)
docs/website/: about.md  faq.md  index.md  installation.md  known_issues.md  tutorials.md
doxygen/: CMakeLists.txt  doxyfile
doxygen/css/: doxystrap.css
doxygen/template/: header.html
examples/: CMakeLists.txt  bessel.hpp  example-3d-helix.cpp  example-bessel-functions.cpp  example-boxes-ticklabels.cpp  example-boxes.cpp  example-custom-draw-commands.cpp  example-figures-layout.cpp  example-figures.cpp  example-filled-curves.cpp  example-logarithmic-axes.cpp  example-missing-data.cpp  example-multiplot-mixed.cpp  example-multiplot.cpp  example-plot-get.cpp  example-plot-reference.cpp  example-readme.cpp  example-sincos-functions-updateable.cpp  example-sincos-functions.cpp  example-sine-functions.cpp  example-trigonometric-functions.cpp  example1.cpp
examples/cmake-project/: CMakeLists.txt  README.md  main.cpp
plot/: palletes.hpp  plot.hpp
sciplot/: Canvas.hpp  Constants.hpp  Default.hpp  Enums.hpp  Figure.hpp  Figures.hpp  IPlot.hpp  IPlotImplForward.hpp  Palettes.hpp  Plot.hpp  Plot2D.hpp  Plot3D.hpp  Plot3DImpl.hpp  PlotBase.hpp  PlotImpl.hpp  StringOrDouble.hpp  Utils.hpp  Vec.hpp  constants.hpp  default.hpp  enums.hpp  multiplot.hpp  palettes.hpp  palletes.hpp  plot.hpp  sciplot.hpp  util.hpp  vec.hpp
sciplot/misc/: ColumnIndex.hpp
sciplot/specs/: AxisLabelSpecs.hpp  AxisTicsSpecs.hpp  BorderSpecs.hpp  DepthSpecs.hpp  DepthSpecsOf.hpp  DrawSpecs.hpp  FillSpecsOf.hpp  FillStyleSpecs.hpp  FilledCurvesSpecsOf.hpp  FontSpecs.hpp  FontSpecsOf.hpp  FrameSpecsOf.hpp  GridSpecs.hpp  GridSpecsBase.hpp  HistogramSpecs.hpp  HistogramStyleSpecs.hpp  LabelSpecs.hpp  LayoutSpecs.hpp  LegendSpecs.hpp  LineSpecs.hpp  LineSpecsOf.hpp  OffsetSpecsOf.hpp  PlotSpecs.hpp  PointSpecsOf.hpp  ShowSpecs.hpp  ShowSpecsOf.hpp  Specs.hpp  TextSpecs.hpp  TextSpecsOf.hpp  TicSpecs.hpp  TicsSpecs.hpp  TicsSpecsBaseOf.hpp  TicsSpecsMajor.hpp  TicsSpecsMinor.hpp  TitleSpecs.hpp  TitleSpecsOf.hpp  axislabelspecs.hpp  borderspecs.hpp  depthspecs.hpp  fontspecs.hpp  (+11 more)
scripts/: CMakeLists.txt  docs-update-tutorial-images.in  generate_palettes_hpp.py  generate_palletes_hpp.py
test/: CMakeLists.txt  plot.cpp
tests/: AxisLabelSpecs.test.cxx  AxisTicsSpecs.test.cxx  BorderSpecs.test.cxx  CMakeLists.txt  ColumnIndex.test.cxx  DepthSpecsOf.test.cxx  DrawSpecs.test.cxx  FillSpecsOf.test.cxx  FillStyleSpecs.test.cxx  FilledCurvesSpecsOf.test.cxx  FontSpecsOf.test.cxx  FrameSpecsOf.test.cxx  GridSpecs.test.cxx  GridSpecsBase.test.cxx  HistogramSpecs.test.cxx  HistogramStyleSpecs.test.cxx  LegendSpecs.test.cxx  LineSpecsOf.test.cxx  OffsetSpecsOf.test.cxx  PointSpecsOf.test.cxx  ShowSpecsOf.test.cxx  TextSpecs.test.cxx  TextSpecsOf.test.cxx  TicsSpecs.test.cxx  TicsSpecsMajor.test.cxx  TicsSpecsMinor.test.cxx  TitleSpecsOf.test.cxx  Utils.test.cxx  catch.hpp  sciplot.test.cxx  tests.cpp
tests/testing-project/: CMakeLists.txt  README.md  main.cpp  util.cpp  util.hpp
(+62 files in other folders)
